# PWO1

./: UpdateSolution_061523.ipynb  UpdateSolution_5232023.ipynb  input_lmas_ramp_optimized.json  input_lmas_ramp_updated.json
Colloidal/: ARMTemplateParametersForFactory.json
Colloidal/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_master.json
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/: README.md  pytest.ini
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/R358/: input copy.json  input.json  input_lmas_ramp.json  input_lmas_ramp_updated (1)  input_lmas_ramp_updated (2) copy  input_twoUF.json  newest_input.json  r358.py  (+2 more)
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/scheduleopt/: pyproject.toml  setup.cfg
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/scheduleopt/scheduleopt/: __init__.py  input_schema.py  schedule_model.py  schedule_solution.py  utils.py  visualize.py
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/scheduleopt/scheduleopt/data/: __init__.py  cleaning-times.csv  r358-cleaning-matrix.csv  r358-cleaning-matrix.csv.xlsx  r358-cleaning-times.csv  r359-cleaning-matrix.csv
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/scheduleopt/tests/: conftest.py  test_schedule_model.py  test_schedule_solution.py
EcoLabOptimization/ECL_EDSP_ScheduleOptimization/scheduleopt/tests/data/: Cleaning Matrix.xlsx  input.json  input_lmas_ramp.json  input_twoUF.json  r-368_cleaning_matrix.csv
factory/: Colloidal.json
linkedService/: Colloidal_Databricks_SC.json  PWO_Credentials.json
pipeline/: PWO_Colloidal.json
(+12 files in other folders)
